tests/baselines/reference/crashOnMethodSignatures.errors.txt
0.ts line 2 col 4: error TS1041: Function implementation expected.
